# Project-Ikaros

./: .gitignore  CMakeLists.txt  Defs.h  Includes.h  config.conf  main.cpp  revision.h.in.cmake
Application/: Application.cpp  Application.h
ConfigMgr/: ConfigMgr.cpp  ConfigMgr.h
Daemon/: Daemon.cpp  Daemon.h
DataArrays/: binData.cpp  binData.h  file.cpp  file.h
Handling/: Handler.cpp  Handler.h
MySQL/: Database.cpp  Database.h
OLD_Makefiles/: README.TXT  makefile
OLD_Makefiles/Protocol/: makefile
OLD_Makefiles/Protocol/FTP/: makefile
OLD_Makefiles/Protocol/HTTP/: makefile
OLD_Makefiles/Protocol/SMTP/: makefile
OLD_Makefiles/Protocol/libdump/: makefile
Protocol/: CMakeLists.txt  Includes.cpp
Protocol/FTP/: Adds.cpp  Adds.h  Base.cpp  Base.h  CMakeLists.txt  FTP.cpp  FTP.h  FileAccessor.cpp  FileAccessor.h  ftp.conf
Protocol/HTTP/: Adds.cpp  Adds.h  Base.cpp  CMakeLists.txt  HTTP.cpp  HTTP.h  defines.h  http.conf
Protocol/SMTP/: Adds.cpp  Base.cpp  Base.h  CMakeLists.txt  SMTP.cpp  SMTP.h  defines.h  smtp.conf
Protocol/libdump/: CMakeLists.txt  libdump.cpp  libdump.h
Shared/: Shared.cpp  Shared.h
Signal/: SignalHandler.cpp  SignalHandler.h
SimpleLog/: SimpleLog.cpp  SimpleLog.h
Sockets/: Socket.cpp  Socket.h  SocketMgr.cpp  SocketMgr.h
Threads/: Thread.cpp  Thread.h  ThreadMgr.cpp  ThreadMgr.h
Utilities/: Utils.cpp  Utils.h
unix_scripts/: IkarosCtl.sh  cleanup.sh  restarter.sh
